--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Vin Nesia">
     <title>Vin Nesia - Blog Tips, Trik & Insight Terkini</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Roboto&display=swap" rel="stylesheet">
     <!-- Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZPZRMB6EN8"></script>
     <script>
@@ -20,7 +21,8 @@
 <body>
     <header>
         <div class="container">
-            <h1>Vin Nesia</h1>
+            <h1 class="logo">Vin Nesia</h1>
+            <span class="nav-toggle">☰</span>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -35,8 +37,9 @@
 
     <main class="container">
         <section class="hero">
-            <h2>Selamat Datang di Vin Nesia</h2>
-            <p>Temukan tips, trik sehari-hari, dan insight terkini untuk hidup lebih produktif dan terinformasi!</p>
+            <h2>Inspirasi & Insight untuk Hidup Lebih Baik</h2>
+            <p>Temukan tips sehari-hari dan insight terkini tentang cuaca, lifestyle, dan lainnya.</p>
+            <a href="bmkg-kemarau.html" class="cta-button">Baca Artikel Terbaru</a>
         </section>
 
         <section id="kategori">
@@ -52,32 +55,35 @@
 
         <section class="blog-posts">
             <h2>Artikel Terbaru</h2>
-            <article>
-                <h3><a href="bmkg-kemarau.html">BMKG Merevisi Musim Kemarau: Insight & Dampak</a></h3>
-                <p>BMKG merevisi prakiraan musim kemarau 2025. Apa saja dampaknya bagi masyarakat dan lingkungan?</p>
-                <div class="share-buttons">
-                    <a href="https://wa.me/?text=Check%20out%20this%20article%20from%20Vin%20Nesia!" target="_blank">WhatsApp</a>
-                    <a href="https://www.instagram.com/vin.nesia.id" target="_blank">Instagram</a>
-                    <a href="https://www.facebook.com/sharer/sharer.php?u=https://vinnesiaaa.github.io/Vin/bmkg-kemarau.html" target="_blank">Facebook</a>
-                    <a href="https://twitter.com/intent/tweet?url=https://vinnesiaaa.github.io/Vin/bmkg-kemarau.html&text=Check%20out%20this%20article%20from%20Vin%20Nesia!" target="_blank">Twitter</a>
-                    <a href="https://www.linkedin.com/shareArticle?mini=true&url=https://vinnesiaaa.github.io/Vin/bmkg-kemarau.html" target="_blank">LinkedIn</a>
-                    <a href="https://t.me/share/url?url=https://vinnesiaaa.github.io/Vin/bmkg-kemarau.html&text=Check%20out%20this%20article%20from%20Vin%20Nesia!" target="_blank">Telegram</a>
-                </div>
-            </article>
-            <article>
-                <h3><a href="blog-post.html">Tips & Trik Sehari-hari untuk Hidup Lebih Produktif</a></h3>
-                <p>Belajar cara mengatur waktu dan meningkatkan produktivitas dengan tips sederhana.</p>
-                <div class="share-buttons">
-                    <a href="https://wa.me/?text=Check%20out%20this%20article%20from%20Vin%20Nesia!" target="_blank">WhatsApp</a>
-                    <a href="https://www.instagram.com/vin.nesia.id" target="_blank">Instagram</a>
-                    <a href="https://www.facebook.com/sharer/sharer.php?u=https://vinnesiaaa.github.io/Vin/blog-post.html" target="_blank">Facebook</a>
-                    <a href="https://twitter.com/intent/tweet?url=https://vinnesiaaa.github.io/Vin/blog-post.html&text=Check%20out%20this%20article%20from%20Vin%20Nesia!" target="_blank">Twitter</a>
-                    <a href="https://www.linkedin.com/shareව
-
-System: shareArticle?mini=true&url=https://vinnesiaaa.github.io/Vin/blog-post.html" target="_blank">LinkedIn</a>
-                    <a href="https://t.me/share/url?url=https://vinnesiaaa.github.io/Vin/blog-post.html&text=Check%20out%20this%20article%20from%20Vin%20Nesia!" target="_blank">Telegram</a>
-                </div>
-            </article>
+            <div class="grid">
+                <article>
+                    <img src="assets/images/bmkg.jpg" alt="BMKG Musim Kemarau">
+                    <h3><a href="bmkg-kemarau.html">BMKG Merevisi Musim Kemarau: Insight & Dampak</a></h3>
+                    <p>BMKG merevisi prakiraan musim kemarau 2025. Apa saja dampaknya bagi masyarakat dan lingkungan?</p>
+                    <div class="share-buttons">
+                        <a href="https://wa.me/?text=Check%20out%20this%20article%20from%20Vin%20Nesia!%20https://vinnesiaaa.github.io/Vin/bmkg-kemarau.html" class="whatsapp" target="_blank">WhatsApp</a>
+                        <a href="https://www.instagram.com/vin.nesia.id" class="instagram" target="_blank">Instagram</a>
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https://vinnesiaaa.github.io/Vin/bmkg-kemarau.html" class="facebook" target="_blank">Facebook</a>
+                        <a href="https://twitter.com/intent/tweet?url=https://vinnesiaaa.github.io/Vin/bmkg-kemarau.html&text=Check%20out%20this%20article%20from%20Vin%20Nesia!" class="twitter" target="_blank">Twitter</a>
+                        <a href="https://www.linkedin.com/shareArticle?mini=true&url=https://vinnesiaaa.github.io/Vin/bmkg-kemarau.html" class="linkedin" target="_blank">LinkedIn</a>
+                        <a href="https://t.me/share/url?url=https://vinnesiaaa.github.io/Vin/bmkg-kemarau.html&text=Check%20out%20this%20article%20from%20Vin%20Nesia!" class="telegram" target="_blank">Telegram</a>
+                    </div>
+                </article>
+                <article>
+                    <img src="assets/images/productivity.jpg" alt="Tips Produktivitas">
+                    <h3><a href="blog-post.html">Tips & Trik Sehari-hari untuk Hidup Lebih Produktif</a></h3>
+                    <p>Belajar cara mengatur waktu dan meningkatkan produktivitas dengan tips sederhana.</p>
+                    <div class="share-buttons">
+                        <a href="https://wa.me/?text=Check%20out%20this%20article%20from%20Vin%20Nesia!%20https://vinnesiaaa.github.io/Vin/blog-post.html" class="whatsapp" target="_blank">WhatsApp</a>
+                        <a href="https://www.instagram.com/vin.nesia.id" class="instagram" target="_blank">Instagram</a>
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https://vinnesiaaa.github.io/Vin/blog-post.html" class="facebook" target="_blank">Facebook</a>
+                        <a href="https://twitter.com/intent/tweet?url=https://vinnesiaaa.github.io/Vin/blog-post.html&text=Check%20out%20this%20article%20from%20Vin%20Nesia!" class="twitter" target="_blank">Twitter</a>
+                        <a href="https://www.linkedin.com/shareArticle?mini=true&url=https://vinnesiaaa.github.io/Vin/blog-post.html" class="linkedin" target="_blank">LinkedIn</a>
+                        <a href="https://t.me/share/url?url=https://vinnesiaaa.github.io/Vin/blog-post.html&text=Check%20out%20this%20article%20from%20Vin%20Nesia!" class="telegram" target="_blank">Telegram</a>
+                    </div>
+                </article>
+            </div>
+            <a href="#" class="cta-button">Lihat Semua Artikel</a>
         </section>
     </main>
 
@@ -89,6 +95,13 @@ System: shareArticle?mini=true&url=https://vinnesiaaa.github.io/Vin/blog-post.ht
                 <a href="mailto:vinn.nesiaa.id@gmail.com">Email</a> |
                 <a href="https://instagram.com/vin.nesia.id" target="_blank">Instagram</a>
             </p>
+            <div class="newsletter">
+                <h3>Berlangganan Newsletter</h3>
+                <form action="https://formspree.io/f/xnnvevpd" method="POST">
+                    <input type="email" name="email" placeholder="Masukkan email Anda" required>
+                    <button type="submit">Berlangganan</button>
+                </form>
+            </div>
         </div>
     </footer>
     <script src="js/script.js"></script>
