--- a/about.html
+++ b/about.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Tentang Vin Nesia - Penulis blog tentang tips, trik, dan insight terkini.">
-    <meta name="keywords" content="Vin Nesia, tentang saya, blog lifestyle, musim kemarau">
+    <meta name="description" content="Tentang Vin Nesia - Penulis blog tentang tips, trik, dan insight terkini seperti musim kemarau BMKG.">
+    <meta name="keywords" content="Vin Nesia, tentang saya, blog lifestyle, musim kemarau, produktivitas">
     <meta name="author" content="Vin Nesia">
     <title>Tentang Saya - Vin Nesia</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Roboto&display=swap" rel="stylesheet">
     <!-- Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZPZRMB6EN8"></script>
     <script>
@@ -20,7 +21,8 @@
 <body>
     <header>
         <div class="container">
-            <h1>Vin Nesia</h1>
+            <h1 class="logo">Vin Nesia</h1>
+            <span class="nav-toggle">☰</span>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -48,6 +50,13 @@
                 <a href="mailto:vinn.nesiaa.id@gmail.com">Email</a> |
                 <a href="https://instagram.com/vin.nesia.id" target="_blank">Instagram</a>
             </p>
+            <div class="newsletter">
+                <h3>Berlangganan Newsletter</h3>
+                <form action="https://formspree.io/f/xnnvevpd" method="POST">
+                    <input type="email" name="email" placeholder="Masukkan email Anda" required>
+                    <button type="submit">Berlangganan</button>
+                </form>
+            </div>
         </div>
     </footer>
     <script src="js/script.js"></script>
