--- a/bmkg-kemarau.html
+++ b/bmkg-kemarau.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Vin Nesia">
     <title>BMKG Merevisi Musim Kemarau: Insight & Dampak - Vin Nesia</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Roboto&display=swap" rel="stylesheet">
     <!-- Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZPZRMB6EN8"></script>
     <script>
@@ -20,7 +21,8 @@
 <body>
     <header>
         <div class="container">
-            <h1>Vin Nesia</h1>
+            <h1 class="logo">Vin Nesia</h1>
+            <span class="nav-toggle">☰</span>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -36,6 +38,7 @@
     <main class="container">
         <article>
             <h1>BMKG Merevisi Musim Kemarau: Insight & Dampak</h1>
+            <img src="assets/images/bmkg.jpg" alt="BMKG Musim Kemarau" class="article-img">
             <p>Badan Meteorologi, Klimatologi, dan Geofisika (BMKG) Indonesia baru-baru ini mengumumkan revisi terhadap prakiraan musim kemarau untuk tahun 2025. Revisi ini mencakup perubahan perkiraan awal musim kemarau, durasi, dan intensitasnya di berbagai wilayah Indonesia. Perubahan ini dipengaruhi oleh fenomena iklim global seperti La Niña, El Niño, dan perubahan pola cuaca akibat perubahan iklim. Artikel ini akan membahas insight dari revisi BMKG, dampaknya terhadap berbagai sektor, dan langkah-langkah yang dapat diambil masyarakat untuk menghadapi musim kemarau yang lebih ekstrem.</p>
 
             <h2>Apa yang Direvisi oleh BMKG?</h2>
@@ -91,12 +94,12 @@
             <p>Revisi prakiraan musim kemarau 2025 oleh BMKG menunjukkan bahwa Indonesia perlu bersiap menghadapi kondisi yang lebih kering dan ekstrem dibandingkan tahun-tahun sebelumnya. Dampaknya terhadap pertanian, lingkungan, kesehatan, dan ekonomi memerlukan respons yang terkoordinasi dari pemerintah, masyarakat, dan sektor swasta. Dengan langkah antisipasi yang tepat, seperti pengelolaan air yang efisien, pencegahan kebakaran hutan, dan diversifikasi mata pencaharian, dampak buruk musim kemarau dapat diminimalkan. Mari kita bersama-sama menjaga lingkungan dan mempersiapkan diri untuk menghadapi tantangan iklim ini.</p>
 
             <div class="share-buttons">
-                <a href="https://wa.me/?text=Check%20out%20this%20article%20from%20Vin%20Nesia!" target="_blank">WhatsApp</a>
-                <a href="https://www.instagram.com/vin.nesia.id" target="_blank">Instagram</a>
-                <a href="https://www.facebook.com/sharer/sharer.php?u=https://vinnesiaaa.github.io/Vin/bmkg-kemarau.html" target="_blank">Facebook</a>
-                <a href="https://twitter.com/intent/tweet?url=https://vinnesiaaa.github.io/Vin/bmkg-kemarau.html&text=Check%20out%20this%20article%20from%20Vin%20Nesia!" target="_blank">Twitter</a>
-                <a href="https://www.linkedin.com/shareArticle?mini=true&url=https://vinnesiaaa.github.io/Vin/bmkg-kemarau.html" target="_blank">LinkedIn</a>
-                <a href="https://t.me/share/url?url=https://vinnesiaaa.github.io/Vin/bmkg-kemarau.html&text=Check%20out%20this%20article%20from%20Vin%20Nesia!" target="_blank">Telegram</a>
+                <a href="https://wa.me/?text=Check%20out%20this%20article%20from%20Vin%20Nesia!%20https://vinnesiaaa.github.io/Vin/bmkg-kemarau.html" class="whatsapp" target="_blank">WhatsApp</a>
+                <a href="https://www.instagram.com/vin.nesia.id" class="instagram" target="_blank">Instagram</a>
+                <a href="https://www.facebook.com/sharer/sharer.php?u=https://vinnesiaaa.github.io/Vin/bmkg-kemarau.html" class="facebook" target="_blank">Facebook</a>
+                <a href="https://twitter.com/intent/tweet?url=https://vinnesiaaa.github.io/Vin/bmkg-kemarau.html&text=Check%20out%20this%20article%20from%20Vin%20Nesia!" class="twitter" target="_blank">Twitter</a>
+                <a href="https://www.linkedin.com/shareArticle?mini=true&url=https://vinnesiaaa.github.io/Vin/bmkg-kemarau.html" class="linkedin" target="_blank">LinkedIn</a>
+                <a href="https://t.me/share/url?url=https://vinnesiaaa.github.io/Vin/bmkg-kemarau.html&text=Check%20out%20this%20article%20from%20Vin%20Nesia!" class="telegram" target="_blank">Telegram</a>
             </div>
         </article>
     </main>
@@ -109,6 +112,13 @@
                 <a href="mailto:vinn.nesiaa.id@gmail.com">Email</a> |
                 <a href="https://instagram.com/vin.nesia.id" target="_blank">Instagram</a>
             </p>
+            <div class="newsletter">
+                <h3>Berlangganan Newsletter</h3>
+                <form action="https://formspree.io/f/xnnvevpd" method="POST">
+                    <input type="email" name="email" placeholder="Masukkan email Anda" required>
+                    <button type="submit">Berlangganan</button>
+                </form>
+            </div>
         </div>
     </footer>
     <script src="js/script.js"></script>
