--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Vin Nesia">
     <title>Kebijakan Privasi - Vin Nesia</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Roboto&display=swap" rel="stylesheet">
     <!-- Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZPZRMB6EN8"></script>
     <script>
@@ -20,7 +21,8 @@
 <body>
     <header>
         <div class="container">
-            <h1>Vin Nesia</h1>
+            <h1 class="logo">Vin Nesia</h1>
+            <span class="nav-toggle">☰</span>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -56,6 +58,13 @@
                 <a href="mailto:vinn.nesiaa.id@gmail.com">Email</a> |
                 <a href="https://instagram.com/vin.nesia.id" target="_blank">Instagram</a>
             </p>
+            <div class="newsletter">
+                <h3>Berlangganan Newsletter</h3>
+                <form action="https://formspree.io/f/xnnvevpd" method="POST">
+                    <input type="email" name="email" placeholder="Masukkan email Anda" required>
+                    <button type="submit">Berlangganan</button>
+                </form>
+            </div>
         </div>
     </footer>
     <script src="js/script.js"></script>
