--- a/index.html
+++ b/index.html
@@ -80,6 +80,16 @@
                     <h3><a href="migrasi-mental.html">Migrasi Mental: Tren Kesehatan Jiwa 2025 yang Harus Kamu Ikuti!</a></h3>
                     <p>Jaga kesehatan mentalmu sebelum semua orang sadar pentingnya.</p>
                 </article>
+                <article class="animate-fade" data-category="Produktivitas & Teknologi">
+    <img src="assets/images/productivity.jpg" alt="Tips Produktivitas">
+    <h3><a href="blog-post.html">Tips & Trik Produktivitas 2025 yang Akan Mengubah Hidupmu!</a></h3>
+    <p>Tingkatkan produktivitas dengan trik terbaru sekarang juga.</p>
+</article>
+<article class="animate-fade" data-category="Lingkungan & Pertanian">
+    <img src="assets/images/bmkg.jpg" alt="BMKG Musim Kemarau">
+    <h3><a href="bmkg-kemarau.html">BMKG Merevisi Musim Kemarau: Insight & Dampak yang Harus Kamu Tahu!</a></h3>
+    <p>Pelajari dampak revisi musim kemarau 2025 sebelum terlambat.</p>
+</article>
             </div>
             <a href="#" class="cta-button animate-pulse">Lihat Semua Artikel</a>
         </section>
