--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 
     <main class="container">
         <section id="hero">
-            <h2>Selamat Datang di Vin Nesia</h2>
-            <p>Berita viral, tips produktivitas, dan inspirasi untuk tahun 2025!</p>
+            <h2>VIRAL 2025 </h2>
+            <p>Berita viral, tips produktivitas, dan inspirasi untuk tahun 2025!!</p>
             <a href="berita.html" class="cta">Lihat Berita Terbaru</a>
         </section>
 
