--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
+    <meta name="google-site-verification" content="5sVbY4T9dTgyVPKynaYq-tO0NGdfsu-0JxyrUvLa2I0" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Vin Nesia - Berita viral, tips produktivitas, dan inspirasi terbaru 2025">
