--- a/berita.html
+++ b/berita.html
@@ -72,6 +72,11 @@
                     <h3><a href="articles/cara-cepat-dapat-cuan-jadi-affiliate-tiktok.html">Cara Cepat Dapat Cuan Jadi Affiliate TikTok</a></h3>
                     <p>Pelajari strategi terbaru untuk menghasilkan cuan dari affiliate TikTok di 2025!</p>
                 </article>
+                <article class="berita-item">
+                    <a href="articles/jepang-vs-china-eaff-e-1-2025.html"><img src="assets/images/jepang-vs-china.jpg" alt="Jepang vs China EAFF E-1 2025" loading="lazy"></a>
+                    <h3><a href="articles/jepang-vs-china-eaff-e-1-2025.html">Jepang vs China EAFF E-1 2025: Analisis Lengkap</a></h3>
+                    <p>Ikuti analisis mendalam duel epik di Yongin Mireu Stadium.</p>
+                </article>
             </div>
         </section>
 
