--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
             <h2>Berita Terbaru 🔔</h2>
             <div class="berita-grid">
                 <article class="berita-item">
+                    <a href="articles/jepang-vs-china-eaff-e-1-2025.html"><img src="assets/images/jepang-vs-china.jpg" alt="Jepang vs China EAFF E-1 2025" loading="lazy"></a>
+                    <h3><a href="articles/jepang-vs-china-eaff-e-1-2025.html">Jepang vs China EAFF E-1 2025: Prediksi & Analisis</a></h3>
+                    <p>Ikuti prediksi skor dan analisis terbaru duel epik di Yongin Mireu Stadium hari ini!</p>
+                </article>
+                <article class="berita-item">
                     <a href="articles/cuaca-pertanian.html"><img src="assets/images/cuaca-pertanian.jpg" alt="Strategi Pertanian Menghadapi Cuaca Ekstrem 2025" loading="lazy"></a>
                     <h3><a href="articles/cuaca-pertanian.html">Strategi Pertanian Menghadapi Cuaca Ekstrem 2025 🌱</a></h3>
                     <p>Belajar cara bertahan dan beradaptasi dengan perubahan iklim di sektor pertanian. 🌍</p>
