--- a/about.html
+++ b/about.html
@@ -41,6 +41,7 @@
         <section class="hero">
             <h2 class="animate-slide">Tentang Saya</h2>
             <p>Selamat datang di dunia saya, tempat di mana inspirasi dan pengetahuan bertemu!</p>
+            <p>Selain tips produktivitas, saya kini juga membahas berita viral seperti Jepang vs China di EAFF E-1 2025!</p>
         </section>
 
         <article>
