--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                     <option value="berita.html?category=kesehatan-jiwa" class="category-option">Kesehatan Jiwa 🧠 <span class="dropdown-icon">❤️</span></option>
                     <option value="berita.html?category=produktivitas" class="category-option">Produktivitas ⏳ <span class="dropdown-icon">⏱️</span></option>
                     <option value="berita.html?category=bisnis-online" class="category-option">Bisnis Online 📈 <span class="dropdown-icon">💻</span></option>
+                    <option value="berita.html?category=sepak-bola" class="category-option">Sepak Bola ⚽ <span class="dropdown-icon">🏆</span></option>
                 </select>
             </div>
         </section>
