--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </section>
 
         <section id="hero">
-            <h2>Selamat Datang di VIN NESIA 🌟</h2>
+            <h2> VIN NESIA TRENDING NEWS 2025</h2>
             <p>Temukan berita viral, tips produktivitas, dan inspirasi terbaru untuk tahun 2025! 🚀</p>
             <!-- Slideshow -->
             <div class="hero-slideshow">
